syntax = "proto3";

package blockscout.sig_provider.v1;

option go_package = "github.com/blockscout/blockscout-rs/sig-provider";

service SignatureService {
  rpc CreateSignatures(CreateSignaturesRequest)
      returns (CreateSignaturesResponse) {}
  rpc GetFunctionSignatures(GetSignaturesRequest)
      returns (GetSignaturesResponse) {}
  rpc GetEventSignatures(GetSignaturesRequest) returns (GetSignaturesResponse) {
  }
}

message CreateSignaturesRequest { string abi = 1; }

message CreateSignaturesResponse {}

message GetSignaturesRequest { string hex = 1; }

message Signature { string name = 1; }

message GetSignaturesResponse { repeated Signature signatures = 1; }